fix alignment.

--- a/Assignment2/style.css
+++ b/Assignment2/style.css
@@ -1,6 +1,9 @@
 .table tr th,
 .table tr td {
     text-align : center;
+    vertical-align: middle;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 
 .table tr td button {
